tests/ui/parser/keyword-static-as-identifier.stderr
error: expected identifier, found keyword `static`
  --> $DIR/keyword-static-as-identifier.rs:4:9
   |
LL |     let static = "foo";
   |         ^^^^^^ expected identifier, found keyword
   |
help: escape `static` to use it as an identifier
   |
LL |     let r#static = "foo";
   |         ++

error: aborting due to previous error

